<resources>
    <string name="app_name">Turbo Maths</string>
    <string name="title_text">Turbo\nMaths</string>
    <string name="title_text_landscape">Turbo Maths</string>
    <string name="about_text">Turbo Maths V1.0, 2024, created by John Crawley</string>

    <string name="main_menu_screen_start_game_button_text">NEW GAME</string>
    <string name="game_over_to_main_menu_button_text">MENU</string>
    <string name="game_over_retry_button_text">RETRY</string>
    <string name="options_button_text">OPTIONS</string>
    <string name="about_button_text">ABOUT</string>
    <string name="time_remaining_label">Timer</string>
    <string name="default_time_remaining">2:00</string>
    <string name="score_label_text">Score</string>
    <string name="default_score_text">0</string>

    <string name="symbol_0">&#160;&#160;0&#160;&#160;</string>
    <string name="symbol_1">&#160;&#160;1&#160;&#160;</string>
    <string name="symbol_2">&#160;&#160;2&#160;&#160;</string>
    <string name="symbol_3">&#160;&#160;3&#160;&#160;</string>
    <string name="symbol_4">&#160;&#160;4&#160;&#160;</string>
    <string name="symbol_5">&#160;&#160;5&#160;&#160;</string>
    <string name="symbol_6">&#160;&#160;6&#160;&#160;</string>
    <string name="symbol_7">&#160;&#160;7&#160;&#160;</string>
    <string name="symbol_8">&#160;&#160;8&#160;&#160;</string>
    <string name="symbol_9">&#160;&#160;9&#160;&#160;</string>
    <string name="symbol_backspace">⌫</string>
    <string name="symbol_enter">&#160;→&#160;</string>


    <string name ="test">&lt;sup&gt;\u00AE&lt;/sup&gt;</string>

    <string name="game_over_text">GAME\nOVER</string>
    <string name="game_over_text_landscape">GAME OVER</string>
    <string name="game_over_details">Level&#160;%1$s,&#160;%2$s</string>
    <string name="start_game_get_ready">GET READY</string>
    <string name="ending_score_label_text">Your Score</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="new_daily_record">NEW DAILY RECORD!</string>
    <string name="new_all_time_record">NEW ALL TIME RECORD!</string>

    <string name="choose_level_heading">Select Level</string>
    <string name="button_text_level_1">1</string>
    <string name="button_text_level_2">2</string>
    <string name="button_text_level_3">3</string>
    <string name="button_text_level_4">4</string>
    <string name="button_text_level_5">5</string>
    <string name="button_text_level_6">6</string>
    <string name="button_text_level_7">7</string>
    <string name="button_text_level_8">8</string>
    <string name="button_text_level_9">9</string>
    <string name="button_text_level_10">10</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="preferences_general_header">General</string>
    <string name="preferences_vibration">Vibration</string>
    <string name="sound_header">Sound</string>


    <string name="preference_sound_button_press">Button Clicks</string>
    <string name="preference_sound_get_ready">Get Ready Beeps</string>
    <string name="preference_sound_game">Game Sounds</string>
    <string name="preference_sound_keypad">Keypad Clicks</string>


    <string name="preference_timer_length">Timer Length</string>
    <string name="time_limit_twelve_seconds">12 Seconds</string>
    <string name="time_limit_thirty_seconds">30 Seconds</string>
    <string name="time_limit_one_minute">1 Minute</string>
    <string name="time_limit_two_minutes">2 Minutes</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>