<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/preferences_general_header">
        <SwitchPreference
            app:key="vibration_enabled"
            app:title="@string/preferences_vibration"
            app:enabled="true"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sound_header">
        <SwitchPreference
            app:key="keypad_sounds"
            app:title="@string/preference_sound_keypad"
            app:enabled="true"
            />
        <SwitchPreference
            app:key="button_sounds"
            app:title="@string/preference_sound_button_press"
            app:enabled="true"
            />
        <SwitchPreference
            app:key="game_sounds"
            app:title="@string/preference_sound_game"
            app:enabled="true"
            />
        <SwitchPreference
            app:key="get_ready_sounds"
            app:title="@string/preference_sound_get_ready"
            app:enabled="true"
            />
    </PreferenceCategory>


</PreferenceScreen>