<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:weightSum="3"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_1"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_2"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_3"
            android:textSize="28sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_4"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_5"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_6"
            android:textSize="28sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:textAlignment="center"
        android:weightSum="3"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_7"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_8"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_9"
            android:textSize="28sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/buttonBackspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_backspace"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_0"
            android:textSize="28sp"
            />

        <TextView
            android:id="@+id/buttonEnter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/symbol_enter"
            android:textSize="28sp"
            />
    </LinearLayout>

</LinearLayout>
