<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                 android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_1"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintBottom_toTopOf="@id/button4"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button1"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintBottom_toTopOf="@id/button5"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button6"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_4"
                 app:layout_constraintTop_toBottomOf="@id/button1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button5"
                app:layout_constraintBottom_toTopOf="@id/button7"
                style="?attr/input_button_style"
                />

         <com.google.android.material.button.MaterialButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_5"
                 app:layout_constraintTop_toBottomOf="@id/button2"
                app:layout_constraintStart_toEndOf="@+id/button4"
                app:layout_constraintEnd_toStartOf="@id/button6"
                app:layout_constraintBottom_toTopOf="@id/button8"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="0dp"                
                android:gravity="center"
                android:text="@string/symbol_6"
                 app:layout_constraintTop_toBottomOf="@id/button3"
                app:layout_constraintStart_toEndOf="@+id/button5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button9"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_7"
                app:layout_constraintTop_toBottomOf="@id/button4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button8"
                app:layout_constraintBottom_toTopOf="@id/buttonBackspace"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_8"
                app:layout_constraintTop_toBottomOf="@id/button5"
                app:layout_constraintStart_toEndOf="@+id/button7"
                app:layout_constraintEnd_toStartOf="@id/button9"
                app:layout_constraintBottom_toTopOf="@id/button0"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button9"
                android:layout_width="0dp"
                 android:layout_height="0dp"
               style="?attr/input_button_style"
                android:gravity="center"
                android:text="@string/symbol_9"
                 app:layout_constraintTop_toBottomOf="@id/button6"
                app:layout_constraintStart_toEndOf="@+id/button8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/buttonEnter"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBackspace"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_backspace"
                app:layout_constraintTop_toBottomOf="@id/button7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button0"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_0"
                 app:layout_constraintTop_toBottomOf="@id/button8"
                app:layout_constraintStart_toEndOf="@id/buttonBackspace"
                app:layout_constraintEnd_toStartOf="@id/buttonEnter"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?attr/input_button_style"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnter"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/symbol_enter"
                app:layout_constraintTop_toBottomOf="@id/button9"
                app:layout_constraintStart_toEndOf="@id/button0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="?attr/input_enter_button_style"
                />


</androidx.constraintlayout.widget.ConstraintLayout>