<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/symbol_1"
            android:textSize="28sp"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_6" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_9" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_backspace" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="@dimen/button_minWidth"
            android:minHeight="@dimen/button_minHeight"
            android:paddingHorizontal="@dimen/button_paddingHorizontal"
            android:paddingVertical="@dimen/button_paddingVertical"
            android:text="@string/symbol_enter" />


    </LinearLayout>


</LinearLayout>
