<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.MainMenuFragment"
    android:background="@drawable/layout_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/status_panel_layout_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/startButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- the title text has multiple shades. Even if you specify a shadow color,
                these shades will be the shadow, creating a luminescent effect. Instead,
                we want a black shadow, so an identical text view behind it, and a shadow is assigned to that
                -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextShadow"
            android:layout_margin="@dimen/title_text_margin"
            android:text="@string/title_text"
            android:textColor="?attr/title_text_shadow_color"
            android:textSize="@dimen/title_text_size"
            android:autoSizeMaxTextSize="@dimen/title_text_size"
            android:autoSizeMinTextSize="@dimen/title_text_size_min"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:shadowColor="?attr/title_text_shadow_color"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:gravity="center"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleText"
            android:layout_margin="@dimen/title_text_margin"
            android:text="@string/title_text"
            android:textSize="@dimen/title_text_size"
            android:autoSizeMaxTextSize="@dimen/title_text_size"
            android:autoSizeMinTextSize="@dimen/title_text_size_min"
            android:autoSizeTextType="uniform"
            android:maxLines="2"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAlignment="center"
            android:textStyle="italic"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/welcome_screen_button_layout_margin_top"
        android:layout_marginBottom="@dimen/welcome_screen_button_layout_margin_bottom"
        android:layout_marginHorizontal="@dimen/welcome_screen_button_layout_margin_horizontal"
        app:layout_constraintWidth_max="@dimen/welcome_screen_button_layout_max_width"
        android:id="@+id/startButtonsLayout"
        app:layout_constraintTop_toBottomOf="@+id/titleTextLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:text="@string/main_menu_screen_start_game_button_text"
            style="?attr/menu_button_style"/>

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:text="@string/options_button_text"
            style="?attr/menu_button_style"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>